reciever last seen align fix

--- a/src/components/Home/Home/DashBoard/Dashboard.css
+++ b/src/components/Home/Home/DashBoard/Dashboard.css
@@ -116,6 +116,7 @@ h4 {
     display: flex;
     flex-direction: column;
     justify-content: end;
+    align-items: flex-end;
     margin-top: 10px;
 }
 
